<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <SwitchPreference
        android:defaultValue="false"
        android:key="running_switch"
        android:summary="@string/running_summary_stopped"
        android:title="@string/running_label" />
    <Preference
        android:key="market_version"
        android:summary="@string/market_version_summary"
        android:title="@string/market_version_label" />

    <PreferenceCategory
        android:key="settings"
        android:title="@string/settings_label">

        <Preference
            android:key="manage_users"
            android:title="@string/manage_users_label" />


        <EditTextPreference
            android:defaultValue="@string/portnumber_default"
            android:key="portNum"
            android:title="@string/port_number_label" />


    </PreferenceCategory>



</PreferenceScreen>






